# CFood

./: .gitignore  CFood.g4  Cargo.toml  LICENSE  Makefile  flake.nix  justfile
src/: error.rs  lib.rs  main.rs  print.rs  tlt.rs  ty.rs
src/antlr/: CFood.interp  CFood.tokens  CFoodLexer.interp  CFoodLexer.tokens  cfoodbaselistener.rs  cfoodbasevisitor.rs  cfoodlexer.rs  cfoodlistener.rs  cfoodparser.rs  cfoodvisitor.rs  mod.rs
src/checker/: mod.rs  tlt.rs  tys.rs
src/compiler/: compiler.rs  decl.rs  expr.rs  mod.rs  tys.rs
src/cst/: marked.rs  mod.rs  parser.rs  sexpr.rs  span.rs  tys.rs  visitor.rs
tests/: 1.c  2.c  3.c  test1.out.txt  test2.out.txt  test3.out.txt
