#:schema https://www.schemastore.org/cargo.json

[package]
name = "cfood"
version = "0.1.0"
edition = "2024"

[dependencies]
# antlr4rust = "0.5.2"
anyhow = "1.0.102"
dbt-antlr4 = "=1.3.6"
from_variant = "3.0.0"
is-macro = "0.3.7"
# dbt-antlr4 = "=1.0.5"
# dbt-antlr4 = "1.2.1"
[dependencies.miette]
version = "7.6.0"
features = ["fancy"]
default-features = false

[dependencies.inkwell]
version = "0.9.0"
features = ["llvm18-1"]
